--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.51MB/s(Youtube:不良林), server: 38.121.43.71, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-1.07MB/s(Youtube:不良林), server: 38.68.135.19, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 波兰-1.14MB/s(Youtube:不良林), server: 217.30.10.67, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇺🇸 美国-882.9KB/s(Youtube:不良林), server: 38.75.136.102, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇳🇱 荷兰-1.48MB/s(Youtube:不良林), server: 185.246.155.35, port: 9045, type: ss, cipher: aes-256-cfb, password: Lp27rqyJq72bZsqX}
+  - {name: 🇺🇸 美国-1.38MB/s(Youtube:不良林), server: 38.64.138.145, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇫🇷 法国-2.00MB/s(Youtube:不良林), server: 149.202.82.172, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-823.9KB/s(Youtube:不良林), server: 38.64.138.145, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-2.81MB/s(Youtube:不良林), server: 38.114.114.69, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇯🇵 日本-2.18MB/s(Youtube:不良林), server: 85.208.108.20, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇺🇸 美国-2.45MB/s(Youtube:不良林), server: 38.68.134.85, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇺🇸 美国-243.2KB/s(Youtube:不良林), server: 38.75.136.21, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇺🇸 美国-1.17MB/s(Youtube:不良林), server: 38.114.114.69, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 波兰-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-882.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-823.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-243.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 波兰-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-882.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-823.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-243.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 波兰-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-882.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-823.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-243.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 波兰-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-882.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-823.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-243.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 波兰-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-882.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-823.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-243.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 波兰-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-882.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-823.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-243.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 波兰-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-882.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-823.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-243.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
