--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.38MB/s(Youtube:不良林), server: 38.64.138.145, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇫🇷 法国-2.00MB/s(Youtube:不良林), server: 149.202.82.172, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-823.9KB/s(Youtube:不良林), server: 38.64.138.145, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-2.81MB/s(Youtube:不良林), server: 38.114.114.69, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇯🇵 日本-2.18MB/s(Youtube:不良林), server: 85.208.108.20, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇺🇸 美国-2.45MB/s(Youtube:不良林), server: 38.68.134.85, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇬🇧 英国-625.5KB/s(Youtube:不良林), server: 172.99.190.39, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林), server: 185.167.116.24, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
+  - {name: 🇫🇷 法国-1.10MB/s(Youtube:不良林), server: 149.202.82.172, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林), server: 213.183.53.222, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇺🇸 美国-956.5KB/s(Youtube:不良林), server: 38.64.138.145, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-1.58MB/s(Youtube:不良林), server: 38.68.134.85, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇺🇸 美国-243.2KB/s(Youtube:不良林), server: 38.75.136.21, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇺🇸 美国-1.17MB/s(Youtube:不良林), server: 38.114.114.69, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇺🇸 美国-1.72MB/s(Youtube:不良林), server: 38.114.114.19, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇺🇸 美国-2.74MB/s(Youtube:不良林), server: 38.114.114.69, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-1.87MB/s(Youtube:不良林), server: 38.114.114.69, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-823.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇬🇧 英国-625.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.10MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-956.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
       - 🇺🇸 美国-243.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-823.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇬🇧 英国-625.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.10MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-956.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
       - 🇺🇸 美国-243.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-823.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇬🇧 英国-625.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.10MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-956.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
       - 🇺🇸 美国-243.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-823.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇬🇧 英国-625.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.10MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-956.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
       - 🇺🇸 美国-243.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-823.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇬🇧 英国-625.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.10MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-956.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
       - 🇺🇸 美国-243.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-823.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇬🇧 英国-625.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.10MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-956.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
       - 🇺🇸 美国-243.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-823.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇬🇧 英国-625.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.10MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-956.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
       - 🇺🇸 美国-243.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
